# Hassan-Ahmed-Projects

./: index.html
assets/: FM50FinalCode.ipynb
projects/: rough-volatility-code.html  rough-volatility.html
projects/MSc Project/: FM50FinalCode.html  rough-volatility-code.html  rough-volatility.html
projects/Option Pricing Project/: cev-cpp-preview.html
projects/Option Pricing Project (MC v CN)/: bbg-cpp-preview.html  cev-cpp-preview.html  option-pricing-code.html  option-pricing.html
projects/Option Pricing Project (MC v CN)/code/CEV_BBG_Project/: BBG_enriched_chain.csv  CMakeLists.txt  PARTA_cn_delta_t0.csv  PARTA_cn_spatial_errors.csv  PARTA_cn_surface.csv  PARTA_cn_temporal_errors.csv  PARTA_mc_error_curve.csv  PARTA_mc_se_line.csv
projects/Option Pricing Project (MC v CN)/code/CEV_BBG_Project/data/: options_chain_clean.csv  snapshot.csv
projects/Option Pricing Project (MC v CN)/code/CEV_BBG_Project/include/: bs.hpp  config.hpp  csv.hpp  pde_bs.hpp  rng.hpp  utils.hpp
projects/Option Pricing Project (MC v CN)/code/CEV_BBG_Project/src/: bbg.cpp  cev.cpp  csv.cpp  main.cpp  pde_bs.cpp
projects/Option Pricing Project/code/CEV_BBG_Project/: PARTA_mc_paths.csv
projects/Option Pricing Project/code/CEV_BBG_Project/include/: bbg.hpp  cev.hpp  stats.hpp  tri.hpp
projects/Option Pricing Project/code/CEV_BBG_Project/scripts/: plot_from_cpp_csvs.py
projects/Option Pricing Project/code/CEV_BBG_Project/src/: bs.cpp
